--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
+    "publish": "cd ./src/app/ng-selectio && npm publish",
     "e2e": "ng e2e"
   },
   "private": true,
