--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build --prod --output-hashing=none --no-delete-output-path",
     "test": "ng test",
     "lint": "ng lint",
     "publish": "cd ./src/app/ng-selectio && npm publish",
