--- a/src/app/ng-selectio/package.json
+++ b/src/app/ng-selectio/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ng-selectio",
-  "version": "1.0.0-beta",
+  "version": "1.0.0-beta.2",
   "description": "Full-featured select component for angular 2/4/5.",
   "main": "index.js",
   "scripts": {
