--- a/package.json
+++ b/package.json
@@ -22,8 +22,12 @@
     "@angular/platform-browser": "^4.2.4",
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
+    "classlist.js": "^1.1.20150312",
     "core-js": "^2.4.1",
+    "es5-shim": "^4.5.10",
+    "intl": "^1.2.5",
     "rxjs": "^5.4.2",
+    "web-animations-js": "^2.3.1",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
