--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "ng build --prod --output-hashing=none --no-delete-output-path --base-href=https://pigins.github.io/ng-selectio/",
     "test": "ng test",
     "lint": "ng lint",
-    "publish": "cd ./src/app/ng-selectio && npm publish",
+    "publish": "cd ./src/app/selectio && npm publish",
     "e2e": "ng e2e"
   },
   "private": true,
