--- a/src/app/selectio/package.json
+++ b/src/app/selectio/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ng-selectio",
-  "version": "1.0.0-beta.12",
-  "description": "Full-featured select component for angular 2/4/5.",
+  "version": "1.0.0-rc.1",
+  "description": "Full-featured select component for angular 4/5/6.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
