--- a/projects/selectio/package.json
+++ b/projects/selectio/package.json
@@ -1,11 +1,7 @@
 {
-  "name": "ng-selectio",
-  "version": "1.0.0-rc.2",
+  "name": "selectio",
+  "version": "1.0.0-rc.3",
   "description": "Full-featured select component for angular 4/5/6.",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/pigins/ng-selectio.git"
@@ -20,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/pigins/ng-selectio/issues"
   },
-  "homepage": "https://pigins.github.io/ng-selectio"
+  "homepage": "https://pigins.github.io/ng-selectio",
+  "peerDependencies": {
+    "@angular/common": "^6.0.0-rc.0 || ^6.0.0",
+    "@angular/core": "^6.0.0-rc.0 || ^6.0.0"
+  }
 }
